# tabula-rasa

./: .pre-commit-config.yaml  BASELINE_COMPARISON.md  CONTRIBUTING.md  Makefile  README.md  REFACTORING_SUMMARY.md  USAGE.md  VALIDATION_FINDINGS.md  compare_baseline.py  demo_multiple_datasets.ipynb  production_table_llm.py  pyproject.toml  requirements.txt  setup.py  test_basic.py  test_syntax.py  validate_query_accuracy.py  validation_output.txt  validation_results.json
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: conf.py
examples/: custom_dataset.py
src/tabula_rasa/: __init__.py
src/tabula_rasa/cli/: main.py
src/tabula_rasa/core/: executor.py  sketch.py
src/tabula_rasa/evaluation/: __init__.py  baseline.py
src/tabula_rasa/models/: encoders.py  qa_model.py
src/tabula_rasa/training/: dataset.py  trainer.py
tabula_rasa/: __version__.py
tabula_rasa/models/: qa_model.py
tests/: test_executor.py  test_models.py  test_sketch.py
